--- a/assets/comparison.html
+++ b/assets/comparison.html
@@ -134,7 +134,7 @@
                                 <li class="con">Misses new or misspelled titles.</li>
                             </ul>
                         </td>
-                        <td class="f1-score">0.632</td>
+                        <td class="f1-score">0.442</td>
                     </tr>
                     <tr>
                         <td><strong>Rule-Based</strong></td>
@@ -146,7 +146,7 @@
                                 <li class="con">Confused by complex ads.</li>
                             </ul>
                         </td>
-                        <td class="f1-score">0.690</td>
+                        <td class="f1-score">0.590</td>
                     </tr>
                     <tr>
                         <td><strong>NER (Machine Learning)</strong></td>
@@ -167,7 +167,7 @@
                             <ul class="pro-con-list">
                                 <li class="pro">Very high accuracy.</li>
                                 <li class="pro">Excellent at handling OCR errors.</li>
-                                <li class="con">Requires extensive manual labeling.</li>
+                                <li class="con">Errors are difficult to trace.</li>
                             </ul>
                         </td>
                         <td class="f1-score">0.920</td>
