--- a/index.html
+++ b/index.html
@@ -709,6 +709,11 @@ line-height: 1.6;
 </section>
 <section id="takeaways" class="slide level2">
 <h2>Takeaways</h2>
+<ul>
+<li><p>Structuring data for economic history research is becoming easier by the day.</p></li>
+<li><p>With a few well-planned examples, LLMs can help us extract structured data from unstructured text.</p></li>
+<li><p>The barriers to using these methods are low, as I hope to have shown.</p></li>
+</ul>
 <div class="browser-window">
 <div class="quarto-figure quarto-figure-center">
 <figure>
