--- a/index.html
+++ b/index.html
@@ -415,6 +415,22 @@ Jonathan Jayes and Suvi Heikkuri
 <div class="browser-window">
 <p><img data-src="assets/race_between_educ_and_tech.jpg"></p>
 </div>
+<aside class="notes">
+<ul>
+<li><p>Goldin &amp; Katz (2008) argue that the demand for skilled labor drives educational attainment.</p></li>
+<li><p>Evidence is from wages &gt; arguing that wages are a proxy for demand.</p></li>
+</ul>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
 </section>
 <section id="competing-theories" class="slide level2 smaller">
 <h2>Competing Theories</h2>
@@ -449,11 +465,43 @@ Jonathan Jayes and Suvi Heikkuri
 <span id="my-code-28"><a href="#my-code-28"></a>           | education levels?                                |</span>
 <span id="my-code-29"><a href="#my-code-29"></a>           +--------------------------------------------------+</span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
+<aside class="notes">
+<ul>
+<li><p>But there isn’t compelling evidence that the skills were demanded by employers directly.</p></li>
+<li><p>It could be that the education system expanded, and people gained new skills, which firms then adapted to use.</p></li>
+<li><p>We want to test this by looking at job adverts in Swedish newspapers.</p></li>
+</ul>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
 </section>
 <section>
 <section id="research-question" class="title-slide slide level1 center" data-background-color="#1F8C71">
 <h1>Research Question</h1>
 <iframe src="assets/theory.html" width="100%" height="700" style="border:none;"></iframe>
+<aside class="notes">
+<ul>
+<li>We want to measure the skills demanded by employers over time, after a new technology is introduced.</li>
+</ul>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
 </section>
 <section id="motivation" class="slide level2">
 <h2>Motivation</h2>
@@ -465,6 +513,21 @@ Jonathan Jayes and Suvi Heikkuri
 </figure>
 </div>
 </div>
+<aside class="notes">
+<ul>
+<li>A great paper by Tobias Karlsson in my department looking at the decline of messenger boys. They find that the introduction of new office technologies led to a decline in messenger jobs.</li>
+</ul>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
 </section>
 <section id="findings-on-messenger-boys" class="slide level2">
 <h2>Findings on Messenger Boys</h2>
@@ -483,6 +546,21 @@ Count of relative frequency for selected job titles in the [Swedish newspaper da
 <div class="browser-window">
 <p><img data-src="assets/running_out_of_time_2.png"></p>
 </div>
+<aside class="notes">
+<ul>
+<li>They use a simple keyword search to count the relative frequency of selected job titles in the Swedish newspaper database. We think that we can do better, capturing skills demanded by employers in a more structured way.</li>
+</ul>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
 </section>
 <section id="inspiration-from-swedish-jobtech" class="slide level2">
 <h2>Inspiration from Swedish Jobtech</h2>
@@ -497,6 +575,22 @@ Count of relative frequency for selected job titles in the [Swedish newspaper da
 </div><div class="column">
 <p><img data-src="assets/job_tech_1.png"></p>
 </div></div>
+<aside class="notes">
+<ul>
+<li><p>The jobtech API enriches job advertisements with structured data, identifying occupations, competencies, traits, and geographical locations from unstructured text.</p></li>
+<li><p>Does not work with historical job ads, but we think that we can adapt the method to do so.</p></li>
+</ul>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
 </section>
 <section id="swedish-jobtech-job-enrichment-api" class="slide level2">
 <h2>Swedish Jobtech Job Enrichment API</h2>
@@ -548,23 +642,63 @@ line-height: 1.6;
 <section id="findings-on-digital-skills-demand-2006-2020" class="slide level2">
 <h2>Findings on Digital Skills Demand (2006-2020)</h2>
 
-<img data-src="index_files/figure-revealjs/unnamed-chunk-3-1.png" width="960" class="r-stretch"></section>
+<img data-src="index_files/figure-revealjs/unnamed-chunk-3-1.png" width="960" class="r-stretch"><aside class="notes">
+<p>With the Jobtech API, we can see that the demand for digital skills (.e.g. powerpoint, excel) in job ads increased significantly from 2006 to 2020, with the public sector lagging behind the private sector.</p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
+</section>
 <section id="what-kind-of-data-do-we-have" class="slide level2">
 <h2>What kind of data do we have?</h2>
 <div class="browser-window">
 <p><img data-src="assets/newspaper_big.jpg"></p>
 </div>
+<aside class="notes">
+<p>Newspapers in Sweden have been digitized and are available online, providing a rich source of historical job advertisements.</p>
+<p>They have many job ads, but they require some work to extract structured data from them.</p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
 </section>
 <section id="what-kind-of-data-do-we-have-1" class="slide level2">
 <h2>What kind of data do we have?</h2>
 <div class="browser-window">
 <p><img data-src="assets/newspaper_small.png"></p>
 </div>
+<aside class="notes">
+<p>Close up, we can see the first word is often the job title, and there is a short description of the job.</p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
 </section></section>
 <section>
 <section id="first-steps" class="title-slide slide level1 center" data-background-color="#1F8C71">
 <h1>First Steps</h1>
-<p>Extract (just) Job Titles from the Swedish Newspaper Database</p>
+<p>Goal: Extract (just) Job Titles from the Swedish Newspaper Database</p>
 <p>Trial Case with 2 newspapers, 1880 - 1925, sampling ten issues per year, every five years, about 6 adverts per issue.</p>
 <p>1,200 hand annotated job titles, 1,000 in training and 200 in test set.</p>
 </section>
@@ -607,7 +741,7 @@ line-height: 1.6;
 <p><strong>Core Idea:</strong> This approach trains a machine learning model to “learn” what a job title looks like in context, treating it as a custom entity, like “Person” or “Plats”.</p>
 <p><strong>How it Works:</strong></p>
 <ol type="1">
-<li><p>Researchers manually label thousands of job titles in a training dataset.</p></li>
+<li><p>We manually label 1,200 job titles in a training dataset.</p></li>
 <li><p>A model (in this case, a state-of-the-art “transformer”) is trained on these examples.</p></li>
 <li><p>The trained model can then identify job titles in new, unseen ads, even if it has never encountered that specific title before.</p></li>
 </ol>
@@ -624,7 +758,8 @@ line-height: 1.6;
 <p><strong>Key Strength:</strong> It is highly accurate and exceptionally robust against OCR errors and spelling variations because it “reads” the entire ad.</p>
 <p><strong>F1-Score: 0.920</strong></p>
 </div></div>
-</section>
+<aside class="notes">
+<p>XLM-R through huggingface. Fine tuned with 1,000 job ads, 200 in test set.</p>
 <section id="text-generation-approach" class="slide level2">
 <h2>Text Generation Approach</h2>
 <div class="cell">
@@ -671,8 +806,7 @@ line-height: 1.6;
 <span id="my-code-41"><a href="#my-code-41"></a><span class="sc">**</span>Input Text<span class="sc">:</span><span class="er">**</span></span>
 <span id="my-code-42"><a href="#my-code-42"></a><span class="st">`</span><span class="at">[PASTE THE HISTORICAL JOB ADVERTISEMENT TEXT HERE]</span><span class="st">`</span></span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
-</section></section>
-<section>
+</section>
 <section id="looking-forward" class="title-slide slide level1 center" data-background-color="#1F8C71">
 <h1>Looking forward</h1>
 <div class="browser-window">
@@ -681,7 +815,7 @@ line-height: 1.6;
 <div class="quarto-figure quarto-figure-center">
 <figure>
 <p><img data-src="assets/dell_layouts.png"></p>
-<figcaption>Melissa Dell’s American Stories</figcaption>
+<figcaption>Melissa Dell’s American Stories (2023)</figcaption>
 </figure>
 </div>
 </div><div class="column">
@@ -727,6 +861,19 @@ line-height: 1.6;
 
 </div>
 </div>
+</section>
+
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
 </section></section>
     </div>
   </div>
