--- a/index.html
+++ b/index.html
@@ -702,10 +702,6 @@ line-height: 1.6;
 <p>Trial Case with 2 newspapers, 1880 - 1925, sampling ten issues per year, every five years, about 6 adverts per issue.</p>
 <p>1,200 hand annotated job titles, 1,000 in training and 200 in test set.</p>
 </section>
-<section id="trial-approaches" class="slide level2">
-<h2>Trial Approaches</h2>
-<iframe src="assets/comparison.html" width="100%" height="700" style="border:none;"></iframe>
-</section>
 <section id="methods-1-2-no-training-data-required" class="slide level2 smaller">
 <h2>Methods 1 &amp; 2: No Training Data Required</h2>
 <div class="columns">
@@ -760,6 +756,35 @@ line-height: 1.6;
 </div></div>
 <aside class="notes">
 <p>XLM-R through huggingface. Fine tuned with 1,000 job ads, 200 in test set.</p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
+</section>
+<section id="trial-approaches" class="slide level2">
+<h2>Trial Approaches</h2>
+<iframe src="assets/comparison.html" width="100%" height="700" style="border:none;"></iframe>
+<aside class="notes">
+<p>Text generation is nearly as accurate as NER, but it is so much easier to implement!</p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
+</section>
 <section id="text-generation-approach" class="slide level2">
 <h2>Text Generation Approach</h2>
 <div class="cell">
@@ -806,7 +831,8 @@ line-height: 1.6;
 <span id="my-code-41"><a href="#my-code-41"></a><span class="sc">**</span>Input Text<span class="sc">:</span><span class="er">**</span></span>
 <span id="my-code-42"><a href="#my-code-42"></a><span class="st">`</span><span class="at">[PASTE THE HISTORICAL JOB ADVERTISEMENT TEXT HERE]</span><span class="st">`</span></span></code><button title="Copy to Clipboard" class="code-copy-button"><i class="bi"></i></button></pre></div>
 </div>
-</section>
+</section></section>
+<section>
 <section id="looking-forward" class="title-slide slide level1 center" data-background-color="#1F8C71">
 <h1>Looking forward</h1>
 <div class="browser-window">
@@ -861,19 +887,6 @@ line-height: 1.6;
 
 </div>
 </div>
-</section>
-
-<style type="text/css">
-        span.MJX_Assistive_MathML {
-          position:absolute!important;
-          clip: rect(1px, 1px, 1px, 1px);
-          padding: 1px 0 0 0!important;
-          border: 0!important;
-          height: 1px!important;
-          width: 1px!important;
-          overflow: hidden!important;
-          display:block!important;
-      }</style></aside>
 </section></section>
     </div>
   </div>
